--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
-        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.USB_PERMISSION" />
 
     <queries>
 
@@ -23,33 +23,33 @@
             <action android:name="android.intent.action.GET_CONTENT" />
         </intent>
     </queries>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SunInstitute"
         android:usesCleartextTraffic="true"
-        android:requestLegacyExternalStorage="true"
-        tools:targetApi="m"
-        tools:ignore="AllowBackup">
-
-        <activity
-            android:name=".ui.fragments.activities.MainActivity"
-            android:label="@string/title_activity_main"/>
-        <activity android:name=".ui.fragments.activities.RegistrationActivity" />
-        <activity
-            android:name=".ui.fragments.activities.LoginActivity"
-            android:theme="@style/noActionBar" >
+        tools:ignore="AllowBackup"
+        tools:targetApi="m">
+        <activity android:name=".ui.fragments.activities.FingerPrintActivity">
             <intent-filter>
                 <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
             </intent-filter>
             <meta-data
                 android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
                 android:resource="@xml/device_filter" />
-
         </activity>
+        <activity
+            android:name=".ui.fragments.activities.MainActivity"
+            android:label="@string/title_activity_main" />
+        <activity android:name=".ui.fragments.activities.RegistrationActivity" />
+        <activity
+            android:name=".ui.fragments.activities.LoginActivity"
+            android:theme="@style/noActionBar" />
         <activity
             android:name=".ui.fragments.activities.SplashActivity"
             android:theme="@style/noActionBar">
