--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,9 @@ dependencies {
 
     implementation 'com.karumi:dexter:6.0.0'
 
+    // reactive
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+
 }
